# NeuralNet

./: Cargo.toml  build.rs
cuda-lib/: .clangd  CMakeLists.txt  add.cu  cuda_init.cu  cuda_lib.cu  cuda_lib.cuh  cuda_lib_wrapper.cu  emul.cu  mmul.cu  sub.cu  transpose.cu  unary.cu  unary.cuh  unary_wrapper.cu
cuda-lib/include/: cuda_lib.h  unary.cu
src/: gpu_math.rs  main.rs  math.rs
src/math/: gpu.rs  mod.rs
src/structure/: layers.rs  models.rs
